@@ -1525,7 +1525,7 @@ CYCLONE_OBJ_API void comment_setup(void){
     class_addmethod(handle_class, (t_method)handle__click_callback, gensym("_click"), A_FLOAT, 0);
     class_addmethod(handle_class, (t_method)handle__motion_callback, gensym("_motion"), A_FLOAT, A_FLOAT, 0);
     
-    post("warning: [cyclone/comment~] has been deprecated");
+    post("warning: [cyclone/comment] has been deprecated");
 
   sys_gui("proc comment_bbox {target cvname tag} {\n\
             pdsend \"$target _bbox $target [$cvname bbox $tag]\"}\n"
