@@ -2,6 +2,10 @@
 | Under the maintenance of Porres, Kwan and Barber: 
 ---------------------------------------------------
 
+--------------------------------------------------
+cyclone 0.9-1 (needs at least Pd Vanilla 0.55-0):
+--------------------------------------------------
+- Improved the object browser plugin 
 
 --------------------------------------------------
 cyclone 0.9-0 (needs at least Pd Vanilla 0.55-0):
